test/1.4/errors/T_ERETLVALS.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

method f() -> (int, int, int) {
    return (1, 2, 3);
}

method g() -> (int) {
    return 1;
}

extern int h(void);

method init() {
    local int i;
    local int j;
    /// ERROR ERETLVALS
    f();
    /// ERROR ERETLVALS
    i = f();
    /// ERROR ERETLVALS
    (i, j) = f();
    /// ERROR ERETLVALS
    (i, j) = g();
    /// ERROR ERETLVALS
    (i, j) = h();
    // no error
    g();
    // no error
    h();
}
